// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Route describe should match snapshot 1`] = `
Object {
  "$": "",
  "nonentity": Object {
    "$": "",
  },
  "son": Object {
    "$": "/child/son",
  },
  "twin": Object {
    "$": "/twin",
    "first": Object {
      "$": "/twin-one",
    },
    "second": Object {
      "$": "/twin-two",
    },
  },
}
`;

exports[`Route render should match snapshot 1`] = `
Array [
  <Route
    exact={true}
    path="/twin-one"
    render={[Function]}
  />,
  <Route
    exact={true}
    path="/twin-two"
    render={[Function]}
  />,
  <Route
    exact={true}
    path="/child/son"
    render={[MockFunction]}
  />,
]
`;

exports[`Route render should use children if nothing else 1`] = `
<Route
  mockProp="mock-value"
  path="/mock-path"
>
  [MockFunction]
</Route>
`;

exports[`Route render should use component over render and children 1`] = `
<Route
  component={[MockFunction]}
  mockProp="mock-value"
  path="/mock-path"
/>
`;

exports[`Route render should use render over children 1`] = `
<Route
  mockProp="mock-value"
  path="/mock-path"
  render={[MockFunction]}
/>
`;
